// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex Example 1`] = `
.emotion-25 {
  height: 50px;
}

.emotion-26 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-Complex Example23456"
  >
    <div
      id="Complex Example23456"
    >
      <div
        class="ant-row emotion-1"
        id="Complex Example-content23456"
      >
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-header23456"
        >
          <div
            id="header23456"
          >
            <div
              class="ant-row emotion-1"
              id="header-content23456"
            >
              <div
                class="ant-col emotion-0"
                id="bl-heading23456"
                style="flex: 1 0 auto;"
              >
                <div
                  id="heading23456"
                >
                  # Issues

                </div>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-feedback23456"
                style="flex: 0 1 auto; align-self: center;"
              >
                <div
                  id="feedback23456"
                >
                  Give Feedback

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tools23456"
        >
          <div
            id="tools23456"
          >
            <div
              class="ant-row emotion-1"
              id="tools-content23456"
            >
              <div
                class="ant-col emotion-0"
                id="bl-search23456"
                style="flex: 0 0 auto;"
              >
                <input
                  class="ant-input"
                  id="search23456"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Assign23456"
                style="flex: 0 0 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Assign23456"
                  type="button"
                >
                  <span>
                    Assign23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Reporter23456"
                style="flex: 0 0 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Reporter23456"
                  type="button"
                >
                  <span>
                    Reporter23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Status23456"
                style="flex: 0 0 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Status23456"
                  type="button"
                >
                  <span>
                    Status23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Type23456"
                style="flex: 1 0 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Type23456"
                  type="button"
                >
                  <span>
                    Type23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-advanced23456"
                style="flex: 0 0 auto;"
              >
                <div
                  id="advanced23456"
                >
                  Advanced Search

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-main23456"
        >
          <div
            id="main23456"
          >
            <div
              class="ant-row emotion-1"
              id="main-content23456"
            >
              <div
                class="ant-col emotion-0"
                id="bl-list_main23456"
                style="flex: 0 1 300px;"
              >
                <div
                  id="list_main23456"
                >
                  <div
                    class="ant-row emotion-1"
                    id="list_main-content23456"
                  >
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-list_tools23456"
                    >
                      <div
                        id="list_tools23456"
                      >
                        <div
                          class="ant-row emotion-1"
                          id="list_tools-content23456"
                        >
                          <div
                            class="ant-col emotion-0"
                            id="bl-Created23456"
                            style="flex: 1 1 auto;"
                          >
                            <button
                              class="ant-btn ant-btn-default"
                              id="Created23456"
                              type="button"
                            >
                              <span>
                                Created23456
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-col emotion-0"
                            id="bl-Fil23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              class="ant-btn ant-btn-default"
                              id="Fil23456"
                              type="button"
                            >
                              <span>
                                Fil23456
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-col emotion-0"
                            id="bl-Ref23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              class="ant-btn ant-btn-default"
                              id="Ref23456"
                              type="button"
                            >
                              <span>
                                Ref23456
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-list23456"
                    >
                      <div
                        id="list23456"
                      >
                        <div
                          class="ant-row emotion-1"
                          id="list-content23456"
                        >
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_123456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_123456"
                            >
                              item_0_123456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_223456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_223456"
                            >
                              item_0_223456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_323456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_323456"
                            >
                              item_0_323456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_423456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_423456"
                            >
                              item_0_423456
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-main_content23456"
                style="flex: 1 1 200px;"
              >
                <div
                  id="main_content23456"
                >
                  <div
                    class="ant-row emotion-1"
                    id="main_content-content23456"
                  >
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        ## Validate still a heading

The below config will fail for both the field on root and the field in the object when the context is validated.

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-comment23456"
                    >
                      <div
                        id="comment23456"
                      >
                        <div
                          class="ant-row emotion-1"
                          id="comment-content23456"
                        >
                          <div
                            class="ant-col emotion-0"
                            id="bl-avatar23456"
                            style="flex: 0 1 80px;"
                          >
                            <div
                              class="emotion-26"
                              id="avatar23456"
                            >
                              avatar23456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-0"
                            id="bl-input_comment23456"
                            style="flex: 1 1 80px;"
                          >
                            <input
                              class="ant-input"
                              id="input_comment23456"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-sider23456"
                style="flex: 0 1 200px;"
              >
                <div
                  id="sider23456"
                >
                  <div
                    class="ant-row emotion-1"
                    id="sider-content23456"
                  >
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        ### One

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        Two

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        ### three

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        Four

                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Complex No Flex Field Example 1`] = `
.emotion-25 {
  height: 50px;
}

.emotion-26 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-Complex No Flex Field Example23456"
  >
    <div
      id="Complex No Flex Field Example23456"
    >
      <div
        class="ant-row emotion-1"
        id="Complex No Flex Field Example-content23456"
      >
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-header23456"
        >
          <div
            id="header23456"
          >
            <div
              class="ant-row emotion-1"
              id="header-content23456"
            >
              <div
                class="ant-col emotion-0"
                id="bl-heading23456"
                style="flex: 1 1 auto;"
              >
                <div
                  id="heading23456"
                >
                  # Issues

                </div>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-feedback23456"
                style="flex: 0 1 auto; align-self: center;"
              >
                <div
                  id="feedback23456"
                >
                  Give Feedback

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tools23456"
        >
          <div
            id="tools23456"
          >
            <div
              class="ant-row emotion-1"
              id="tools-content23456"
            >
              <div
                class="ant-col emotion-0"
                id="bl-search23456"
                style="flex: 0 1 auto;"
              >
                <input
                  class="ant-input"
                  id="search23456"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Assign23456"
                style="flex: 0 1 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Assign23456"
                  type="button"
                >
                  <span>
                    Assign23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Reporter23456"
                style="flex: 0 1 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Reporter23456"
                  type="button"
                >
                  <span>
                    Reporter23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Status23456"
                style="flex: 0 1 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Status23456"
                  type="button"
                >
                  <span>
                    Status23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-Type23456"
                style="flex: 1 1 auto;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  id="Type23456"
                  type="button"
                >
                  <span>
                    Type23456
                  </span>
                </button>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-advanced23456"
                style="flex: 0 1 auto;"
              >
                <div
                  id="advanced23456"
                >
                  Advanced Search

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-main23456"
        >
          <div
            id="main23456"
          >
            <div
              class="ant-row emotion-1"
              id="main-content23456"
            >
              <div
                class="ant-col emotion-0"
                id="bl-list_main23456"
                style="flex: 0 1 300px;"
              >
                <div
                  id="list_main23456"
                >
                  <div
                    class="ant-row emotion-1"
                    id="list_main-content23456"
                  >
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-list_tools23456"
                    >
                      <div
                        id="list_tools23456"
                      >
                        <div
                          class="ant-row emotion-1"
                          id="list_tools-content23456"
                        >
                          <div
                            class="ant-col emotion-0"
                            id="bl-Created23456"
                            style="flex: 1 1 auto;"
                          >
                            <button
                              class="ant-btn ant-btn-default"
                              id="Created23456"
                              type="button"
                            >
                              <span>
                                Created23456
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-col emotion-0"
                            id="bl-Fil23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              class="ant-btn ant-btn-default"
                              id="Fil23456"
                              type="button"
                            >
                              <span>
                                Fil23456
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-col emotion-0"
                            id="bl-Ref23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              class="ant-btn ant-btn-default"
                              id="Ref23456"
                              type="button"
                            >
                              <span>
                                Ref23456
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-list23456"
                    >
                      <div
                        id="list23456"
                      >
                        <div
                          class="ant-row emotion-1"
                          id="list-content23456"
                        >
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_123456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_123456"
                            >
                              item_0_123456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_223456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_223456"
                            >
                              item_0_223456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_323456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_323456"
                            >
                              item_0_323456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-25 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                            id="bl-item_0_423456"
                          >
                            <div
                              class="emotion-26"
                              id="item_0_423456"
                            >
                              item_0_423456
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-main_content23456"
                style="flex: 1 1 200px;"
              >
                <div
                  id="main_content23456"
                >
                  <div
                    class="ant-row emotion-1"
                    id="main_content-content23456"
                  >
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        ## Validate still a heading

The below config will fail for both the field on root and the field in the object when the context is validated.

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-comment23456"
                    >
                      <div
                        id="comment23456"
                      >
                        <div
                          class="ant-row emotion-1"
                          id="comment-content23456"
                        >
                          <div
                            class="ant-col emotion-0"
                            id="bl-avatar23456"
                            style="flex: 0 1 auto;"
                          >
                            <div
                              class="emotion-26"
                              id="avatar23456"
                            >
                              avatar23456
                            </div>
                          </div>
                          <div
                            class="ant-col emotion-0"
                            id="bl-inputs_comment23456"
                            style="flex: 1 1 auto;"
                          >
                            <input
                              class="ant-input"
                              id="inputs_comment23456"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-col emotion-0"
                id="bl-sider23456"
                style="flex: 0 1 200px;"
              >
                <div
                  id="sider23456"
                >
                  <div
                    class="ant-row emotion-1"
                    id="sider-content23456"
                  >
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        ### One

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        Two

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        ### three

                      </div>
                    </div>
                    <div
                      class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                      id="bl-content23456"
                    >
                      <div
                        id="content23456"
                      >
                        Four

                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
